--- a/client/index.html
+++ b/client/index.html
@@ -56,6 +56,7 @@
       <ul id="users"></ul>
     </div>
   </nav>
+  <script src="setup.js"></script>
   <script src="highlight_manager.js"></script>
   <script src="client.js"></script>
 </body>
