Move sidebar related code to sidebar file

--- a/client/index.html
+++ b/client/index.html
@@ -59,6 +59,7 @@
   <script src="setup.js"></script>
   <script src="highlight_manager.js"></script>
   <script src="scheme_manager.js"></script>
+  <script src="sidebar.js"></script>
   <script src="client.js"></script>
 </body>
 
